src/objects/Invoice_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Batch</label>
        <referenceTo>Invoice_Batch__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Xero_Account_Code__c</fullName>
        <label>Xero Account Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Account_Id__c</fullName>
        <label>Xero Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Id__c</fullName>
        <label>Xero Invoice Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Number__c</fullName>
        <label>Xero Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xero_response__c</fullName>
        <label>xero_response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Payment</label>
    <nameField>
        <label>Invoice Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>